--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,15 +12,25 @@
   --font-mono: var(--font-geist-mono);
 }
 
+/* Body Styles (Light Mode) */
+body {
+  background: var(--background) url('/stacked-waves-haikei-light.svg') 
+    no-repeat center center fixed;
+  background-size: cover;
+  color: var(--foreground);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Dark Mode */
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    background: var(--background) url('/stacked-waves-haikei-dark.svg') 
+      no-repeat center center fixed;
+    background-size: cover;
+  }
 }
