--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --background: #ffffff;
@@ -14,8 +14,8 @@
 
 /* Body Styles (Light Mode) */
 body {
-  background: var(--background) url('/stacked-waves-haikei-light.svg') 
-    no-repeat center center fixed;
+  background: var(--background) url('/stacked-waves-haikei-light.svg') no-repeat
+    center center fixed;
   background-size: cover;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
@@ -29,7 +29,7 @@ body {
   }
 
   body {
-    background: var(--background) url('/stacked-waves-haikei-dark.svg') 
+    background: var(--background) url('/stacked-waves-haikei-dark.svg')
       no-repeat center center fixed;
     background-size: cover;
   }
