--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,11 +16,8 @@
 
 /* Body Styles (Light Mode) */
 body {
-  background: var(--background) url('/stacked-waves-haikei-light.svg') 
-  no-repeat center center fixed;
-  background-size: cover;
+  background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Dark Mode */
@@ -31,9 +28,8 @@ body {
   }
 
   body {
-    background: var(--background) url('/stacked-waves-haikei-dark.svg')
-      no-repeat center center fixed;
-    background-size: cover;
+    background: var(--background);
+    color: var(--foreground);
   }
 }
 
