--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,11 @@ body {
   }
 }
 
+input[type='date']::-webkit-calendar-picker-indicator,
+input[type='datetime-local']::-webkit-calendar-picker-indicator {
+  filter: brightness(0); /* Adjust to make it lighter */
+  opacity: 0;            /* Optional: make it more transparent */
+}
 
 /* ### Light Mode Colors
 
