--- a/src/styles/fullcalendar.css
+++ b/src/styles/fullcalendar.css
@@ -34,6 +34,10 @@
   --fc-event-text-color: #ffffff;
 }
 
+.fc-daygrid-day {
+  height: 150px !important;
+}
+
 .fc .fc-button {
   padding: 8px 16px;
   font-size: 0.875rem;
